--- a/TODO
+++ b/TODO
@@ -3,7 +3,12 @@ TODO
 
 - Make sure you can define more than one variable in a line.
 - Multiple evals and definitions in one line
-- Lousy Python needs to be refactored and made in a library.
 - column sum to answer some issues:
     - when collecting numbers save the column #
     - @csum will sum up those numbers in the right column.
+
+- ideas about quantities:
+    5 op
+    3 op
+    12 eur
+    <@sum:op = 8>
