Make multiple evaluations per line possible.
The code is all messed up at this point, though. A couple of questions remain,
some clear cases of bugs and the tests are hole-y.  Some things do look a bit
nicer, though. We sure can improve from here and it's gonna be great.

--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
 TODO
 
 
-- Make sure you can define more than one variable in a line.
-- Multiple evals and definitions in one line
-
+- idea: sums wouldn't accumulate by default, but prefix with + to acc.
 
 NOT GONNA DO
 
